kubernetes/apps/media/jellyfin/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  hostnames:
    - jellyfin.krapulax.dev
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
